[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ingame/stage/computador/tela-computador.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ingame/stage/computador/tela-computador.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ingame/stage/computador/icons/lixo.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ingame/stage/computador/icons/file-exe.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ingame/stage/computador/icons/chat.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ingame/stage/computador/icons/IDE.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ingame/scenario/home/bedroom/tileset-quarto.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ingame/stage/computador/icons/browser.png" type="Texture" id=8]

[sub_resource type="TileSet" id=1]
0/name = "tileset-quarto.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 16, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset-quarto.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 32, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="tela-computador" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65536, 1, 0, 65541, 1, 0, 65542, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0 )

[node name="Tela-computador" type="Sprite" parent="."]
position = Vector2( 200, 160 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 200, 152 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="icons" type="Node2D" parent="."]

[node name="chat" type="Button" parent="icons"]
margin_left = 290.0
margin_top = 40.0
margin_right = 318.0
margin_bottom = 62.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 5 )
flat = true

[node name="IDE" type="Button" parent="icons"]
margin_left = 64.0
margin_top = 72.0
margin_right = 92.0
margin_bottom = 94.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 6 )
flat = true

[node name="file" type="Button" parent="icons"]
margin_left = 64.0
margin_top = 40.0
margin_right = 92.0
margin_bottom = 62.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 4 )
flat = true

[node name="lixo" type="Button" parent="icons"]
margin_left = 290.0
margin_top = 104.0
margin_right = 318.0
margin_bottom = 126.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 3 )
flat = true
clip_text = true

[node name="browser" type="Button" parent="icons"]
margin_left = 290.0
margin_top = 72.0
margin_right = 318.0
margin_bottom = 94.0
rect_scale = Vector2( 1.5, 1.5 )
icon = ExtResource( 8 )
flat = true

[node name="pop-outs" type="Node2D" parent="."]

[node name="pos_chat" type="Position2D" parent="pop-outs"]
position = Vector2( 200, 136 )

[node name="pos_IDE" type="Position2D" parent="pop-outs"]
position = Vector2( 208, 80 )

[node name="pos_lixo" type="Position2D" parent="pop-outs"]
position = Vector2( 152, 120 )

[node name="pos_file" type="Position2D" parent="pop-outs"]
position = Vector2( 256, 104 )

[node name="pos_browser" type="Position2D" parent="pop-outs"]
position = Vector2( 144, 88 )

[connection signal="pressed" from="icons/chat" to="." method="_on_chat_pressed"]
[connection signal="pressed" from="icons/IDE" to="." method="_on_IDE_pressed"]
[connection signal="pressed" from="icons/file" to="." method="_on_file_pressed"]
[connection signal="pressed" from="icons/lixo" to="." method="_on_lixo_pressed"]
[connection signal="pressed" from="icons/browser" to="." method="_on_browser_pressed"]
